Fix show message
